# mayhem-mandrill

./: README.md  pyproject.toml
mayhem_mandrill/: main.py
part-0/: mayhem1.py  mayhem2.py  mayhem3.py  mayhem4.py
part-1/: mayhem1.py  mayhem2.py  mayhem3.py  mayhem4.py
part-2/: mayhem1.py  mayhem2.py
part-3/: mayhem_1.py  mayhem_2.py
part-4/: mayhem-1.py  mayhem-2.py  mayhem_3.py
part-5/: mayhem.py  mayhem_fulltest.py  test_mayhem_1.py  test_mayhem_2.py  test_mayhem_3.py  test_mayhem_4.py  test_mayhem_5.py
part-6/: mayhem_1.py  mayhem_2.py  mayhem_3.py
part-7/: mayhem_cprofile.py  mayhem_final.py  mayhem_interlude.py  mayhem_line_profiler.py
tests/: test_mayhem_mandrill.py
