[tool.poetry]
name = "mayhem-mandrill"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "~2.26"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
mayhem = "mayhem_mandrill.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
